# verus-test

./: Cargo.toml  README.md
src/: InsertionSortStEph.rs  Types.rs  lib.rs
src/Chap05/: MappingStEph.rs  RelationStEph.rs  SetStEph.rs
src/vstdplus/: README.md  clone_plus.rs  clone_view.rs  feq.rs  hash_set_specs.rs  hash_set_with_view_plus.rs  mod.rs  partial_order.rs  seq_set.rs  set.rs  set_axioms.rs  set_with_view.rs  total_order.rs  vec.rs
tests/: TestInsertionSortStEph.rs
tests/Chap03/: TestInsertionSortStEph.rs
tests/Chap05/: TestMappingStEph.rs  TestRelationStEph.rs  TestSetStEph.rs
