[package]
name = "verus-test"
version = "0.1.0"
edition = "2024"

[dependencies]
verus_builtin_macros = { path = "/home/milnes/projects/verus-lang/source/builtin_macros" }
verus_builtin = { path = "/home/milnes/projects/verus-lang/source/builtin" }
vstd = { path = "/home/milnes/projects/verus-lang/source/vstd", features = ["alloc", "std"] }

[dev-dependencies]

[profile.release]
incremental = true

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
unused_imports = "allow"
dead_code = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }

[lints.clippy]
module_inception = "allow"
type_complexity = "allow"

[workspace]
members = ["."]

[[test]]
name = "TestInsertionSortStEph"
path = "tests/Chap03/TestInsertionSortStEph.rs"

[[test]]
name = "TestSetStEph"
path = "tests/Chap05/TestSetStEph.rs"

[[test]]
name = "TestRelationStEph"
path = "tests/Chap05/TestRelationStEph.rs"

[[test]]
name = "TestMappingStEph"
path = "tests/Chap05/TestMappingStEph.rs"

